--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,6 @@ grades_to_canvas/__pycache__
 grades_to_canvas/.DS_Store
 .DS_Store
 M4-Autograder/.env
+grade-scraper/temporary-repo-directory/
+grade-scraper/grades/
+grade-scraper/util/json-files/
